--- a/app/src/main/res/layout/activity_calendario_mensual.xml
+++ b/app/src/main/res/layout/activity_calendario_mensual.xml
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         app:mcv_showOtherDates="all"
         app:mcv_selectionColor="#00F"
-        />
+        app:theme="@style/AlertDialog.AppCompat"
+        android:layout_alignParentEnd="true" />
 
     <!-- ScrollView en el que se muestran los eventos de un día determinado -->
     <ScrollView
@@ -26,19 +27,19 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/calendarView"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="14dp">
+        android:layout_marginTop="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:showDividers="beginning">
 
             <!-- RecyclerView para mostrar los eventos de un día seleccionado por el usuario -->
             <android.support.v7.widget.RecyclerView
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/recyclerEvents"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="3dp"
                 android:scrollbars="vertical">
 
