--- a/app/src/main/res/layout/detalle_eventos_mensuales.xml
+++ b/app/src/main/res/layout/detalle_eventos_mensuales.xml
@@ -2,11 +2,12 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    card_view:cardCornerRadius="2dp"
-    card_view:cardElevation="1dp"
+    android:layout_height="50dp"
+    card_view:cardCornerRadius="0dp"
+    card_view:cardElevation="0dp"
     card_view:contentPaddingRight="0dp"
     card_view:contentPaddingLeft="0dp"
+    card_view:cardBackgroundColor="@color/green"
     card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
@@ -22,8 +23,8 @@
             android:id="@+id/nombreEvento"
 
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:textIsSelectable="true"
