--- a/app/src/main/res/layout/activity_calendario_mensual.xml
+++ b/app/src/main/res/layout/activity_calendario_mensual.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_calendario_mensual"
+    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,15 +20,32 @@
         app:mcv_showOtherDates="all"
         app:mcv_selectionColor="#00F"
         app:theme="@style/AlertDialog.AppCompat"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        app:mcv_tileHeight="30dp"/>
+
+
+
+    <TextView
+        android:id="@+id/txtEventosDia"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Eventos del día"
+        android:layout_alignBottom="@id/calendarView"
+        android:layout_marginBottom="-28dp"
+        android:textStyle="bold"
+        android:textSize="14dp"
+         />
+
+
 
     <!-- ScrollView en el que se muestran los eventos de un día determinado -->
     <ScrollView
+        android:id="@+id/scrollViewEventosMensuales"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/calendarView"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="25dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,11 +53,13 @@
             android:orientation="vertical"
             android:showDividers="beginning">
 
+
+
             <!-- RecyclerView para mostrar los eventos de un día seleccionado por el usuario -->
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerEvents"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="193dp"
                 android:padding="3dp"
                 android:scrollbars="vertical">
 
