--- a/app/src/main/res/layout/detalle_eventos_mensuales.xml
+++ b/app/src/main/res/layout/detalle_eventos_mensuales.xml
@@ -3,11 +3,20 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    card_view:cardCornerRadius="0dp"
-    card_view:cardElevation="0dp"
+    card_view:cardCornerRadius="1dp"
+    card_view:cardPreventCornerOverlap="true"
     card_view:contentPaddingRight="0dp"
     card_view:contentPaddingLeft="0dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardElevation="2dp"
+    card_view:layout_keyline="1"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardBackgroundColor="@color/grayClaro"
+    >
+    <!--
+    card_view:cardElevation="0dp"
+    card_view:cardUseCompatPadding="true"
+    -->
+
 
     <RelativeLayout
         android:layout_width="match_parent"
