--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
 
     <item name="darkgreen" type="color">#FF669900</item>
 
+    <item name="grayClaro" type="color">#EEEEEE</item>
 </resources>
