--- a/app/src/main/res/layout/content_edicion_detalle.xml
+++ b/app/src/main/res/layout/content_edicion_detalle.xml
@@ -206,6 +206,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="0dp" />
 
+
             <Button
                 android:id="@+id/btnCancelarEvento"
                 style="?android:textAppearanceSmall"
@@ -217,7 +218,20 @@
                 android:background="@drawable/boton"
                 android:layout_weight="0.31"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/btnGrabarEvento" />
+                android:layout_toEndOf="@+id/btnEliminarEvento" />
+
+            <Button
+                android:id="@+id/btnEliminarEvento"
+                style="?android:textAppearanceSmall"
+
+                android:layout_height="match_parent"
+                android:text="@string/btnEliminar"
+                android:textStyle="bold"
+                android:background="@drawable/boton"
+                android:layout_weight="0.31"
+                android:layout_width="101dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
 
